Remove obsolete libraries