@@ -5,50 +5,41 @@ import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.LinkedHashMap;
-import java.util.List;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class GenerateSources {
 
-  private static final List<String> numericTypes = List.of("Double", "Float", "Long", "Int");
+  private static final Set<String> numerics = new LinkedHashSet<>(Arrays.asList("Double", "Float", "Long", "Int"));
+  private static final Set<String> types = concat(numerics, "String", "Boolean");
+  private static final Set<String> cmps = concat(numerics, "String");
+  private static final Set<String> nullables = Collections.singleton("String");
 
-  private static final List<String> types = Stream.concat(
-      numericTypes.stream(),
-      Stream.of("String", "Boolean")
-  ).collect(Collectors.toUnmodifiableList());
-
-  private static final List<String> cmpTypes = Stream.concat(
-      numericTypes.stream(),
-      Stream.of("String")
-  ).collect(Collectors.toUnmodifiableList());
-
-  private static final Map<String, String> numericOps = List.of(
-      Map.entry("minus", "subtract"),
-      Map.entry("plus", "add"),
-      Map.entry("times", "multiply"),
-      Map.entry("div", "divide")
-  ).stream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (v1, v2) -> v2, LinkedHashMap::new));
+  private static final Map<String, String> numericOps = Map.of(
+      "minus", "subtract",
+      "plus", "add",
+      "times", "multiply",
+      "div", "divide"
+  );
 
   public static void main(String... args) throws Exception {
     final var genSourcesDir = Path.of(args[0]);
 
     gen(genSourcesDir, "BindingExtensions", file -> {
-      file.format("fun <T, R> ObservableValue<T>.map(func: (T) -> R): ObjectBinding<R> = createObjectBinding(java.util.concurrent.Callable { func(value)}, this)%n");
-      types.forEach(p -> {
-        final var t = mt(p);
-        file.format("fun <T> ObservableValue<T>.map%s(func: (T) -> %s): %sBinding = create%sBinding(java.util.concurrent.Callable { func(value) }, this)%n", p, p, t, t);
-        types.forEach(pn -> {
-          if (pn.equals(p)) {
-            file.format("fun Observable%sValue.map(func: (%s) -> %s): %sBinding = create%sBinding(java.util.concurrent.Callable { func(get()) }, this)%n", t, p, p, t, t);
+      file.format("fun <T, R> ObservableValue<T>.map(func: (T?) -> R?): ObjectBinding<R?> = createObjectBinding(Callable { func(value)}, this)%n");
+      types.forEach(f -> {
+        file.format("fun <T> ObservableValue<T?>.map%1$s(func: (T?) -> %2$s): %1$sBinding = create%1$sBinding(Callable { func(value) }, this)%n", f, t(f));
+        file.format("fun <R> Observable%2$sValue.mapObject(func: (%1$s) -> R?): ObjectBinding<R?> = createObjectBinding(Callable {func(get()) }, this)%n", t(f), f);
+        types.forEach(t -> {
+          if (t.equals(f)) {
+            file.format("fun Observable%1$sValue.map(func: (%1$s) -> %1$s): %1$sBinding = create%1$sBinding(Callable { func(get()) }, this)%n", f);
           } else {
-            final var tn = mt(pn);
-            file.format("fun Observable%sValue.map%s(func: (%s) -> %s): %sBinding = create%sBinding(java.util.concurrent.Callable { func(get()) }, this)%n", t, pn, p, pn, tn, tn);
+            file.format("fun Observable%1$sValue.map%2$s(func: (%3$s) -> %4$s): %2$sBinding = create%2$sBinding(Callable { func(get()) }, this)%n", f, t, t(f), t(t));
           }
         });
       });
@@ -56,14 +47,11 @@ public class GenerateSources {
 
     gen(genSourcesDir, "BindingNumericOpsExtensions", file -> numericOps.forEach((op, method) -> {
       file.format("// %s --> %s%n", op, method);
-      for (final var p : numericTypes) {
-        for (final var pn : numericTypes) {
-          final var rt = mt(nt(p, pn));
-          final var t = mt(p);
-          final var tn = mt(pn);
-          file.format("fun Observable%sValue.%s(v: %s): %sBinding = %s(this, v) as %sBinding%n", t, op, pn, rt, method, rt);
-          file.format("fun %s.%s(v: Observable%sValue): %sBinding = %s(this, v) as %sBinding%n", p, op, tn, rt, method, rt);
-          file.format("fun Observable%sValue.%s(v: Observable%sValue): %sBinding = %s(this, v) as %sBinding%n", t, op, tn, rt, method, rt);
+      for (final var p : numerics) {
+        for (final var pn : numerics) {
+          file.format("fun Observable%sValue.%s(v: %s): %sBinding = %s(this, v) as %sBinding%n", p, op, pn, c(p, pn), method, c(p, pn));
+          file.format("fun %s.%s(v: Observable%sValue): %sBinding = %s(this, v) as %sBinding%n", p, op, pn, c(p, pn), method, c(p, pn));
+          file.format("fun Observable%sValue.%s(v: Observable%sValue): %sBinding = %s(this, v) as %sBinding%n", p, op, pn, c(p, pn), method, c(p, pn));
         }
       }
       file.println();
@@ -79,16 +67,14 @@ public class GenerateSources {
       w.format("import javafx.beans.binding.*%n");
       w.format("import javafx.beans.binding.Bindings.*%n");
       w.format("import javafx.beans.value.*%n");
+      w.format("import java.util.concurrent.Callable%n");
+      w.format("import org.marid.fx.extensions.ExtensionHelpers.createIntBinding%n");
       w.println();
       code.accept(w);
     }
   }
 
-  private static String mt(String type) {
-    return type.equals("Int") ? "Integer" : type;
-  }
-
-  private static String nt(String... types) {
+  private static String c(String... types) {
     if (Arrays.asList(types).contains("Double")) {
       return "Double";
     }
@@ -99,5 +85,16 @@ public class GenerateSources {
       return "Long";
     }
     return "Int";
+  }
+
+  private static String t(String type) {
+    return nullables.contains(type) ? type + "?" : type;
+  }
+
+  private static LinkedHashSet<String> concat(Set<String> set, String... elements) {
+    final var result = new LinkedHashSet<String>(set.size() + elements.length);
+    result.addAll(set);
+    Collections.addAll(result, elements);
+    return result;
   }
 }
